bk_ida/gccida/c1/gen_peephole2_1266
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_peephole2_1266/src/insn-emit.c:18408:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_REG( ( machine_mode)v2, v3); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_peephole2_1266/src/obj/insn-emit.o] Error 1
